Changes in geographiclib-octave

Version 2.3 (released 2024-mm-dd)
  * Fix serious BUG in triaxial.distance where incorrect results were
    sometimes returned when bet1 and bet2 had opposite signs and were
    both close to +/-90deg.
  * Fix vectorization bugs for triaxial.elliptocart2 and
    triaxial.cart2toellip; these arose if the position was a single
    umbilical point, and several directions were specified.
  * Fix bug in triaxial.cart2toellip for the computation of azimuth
    for umbilical points.
  * Fix bug in handling default arguments for triaxial.ellipnorm.
  * Add triaxial.ellipflip.
  * Fix triaxial.distance with ellipsoidal coodinates so that the
    azimuths returned are consistent with the sheets of the endpoints.

Version 2.2 (released 2024-04-09)
  * Add a class, triaxial, to solve problems on a triaxial ellipsoid.
    This involves a lot of new code so...  Expect there to be errors
    in the documentation (please report).  Also be prepared for the
    interface to change.  The class includes
    - the solution of the direct and inverse geodesic problems,
    - conversions between various coordinate systems,
    - random sampling on the ellipsoid,
    - functions to aid plotting curves on the ellipsoid.

Version 2.1 (released 2024-04-06)
  * The ellipsoid returned by defaultellipsoid can now be set.
  * Relax overly strict convergence test in geoddistance.

Version 2.0 (released 2022-04-21)
  * Reorganized code base; there's now a stand-alone git repository at
    https://github.com/geographiclib/geographiclib-octave
  * Created an Octave package.
  * Fix bug where a geodesic with lat1 = 0 and lat2 = nan was treated
    as equatorial.
  * Upgrade the vectorization in geodreckon so that it handles
    computations in which lat1, lon1, azi1 are column vectors and s12
    is a row vector efficiently.
  * More careful treatment of angles +/-0 and +/-180.
    - These behave consistently with taking the limits