@@ -29,21 +29,26 @@ function [ellipn, alpn, flip] = ellipnorm(ellip, alp, alt)
   alp = remx(alp, 360, true);
   if ~alt
     % Flip if abs(bet) > 90 or abs(bet) == 90 and omg < 0
-    % at northern umblic, return alp in (-180,-90] + (90, 180]
-    % at southern umblic, return alp in (-90, 90]
-    l =  abs(bet) > 90 | ...
-         (abs(bet) == 90 & omg < 0) | ...
-         ((omg ==   0 | omg == 180) & ...
-          (bet ==  90 &  (alp > -90 & alp <= 90)) | ...
-          (bet == -90 & ~(alp > -90 & alp <= 90)));
+    l =  abs(bet) > 90 | (abs(bet) == 90 & omg < 0);
+    if nargin >= 2
+      % at northern umblic, return alp in (-180,-90] + (90, 180]
+      % at southern umblic, return alp in (-90, 90]
+      l = l | ...
+          ((omg ==   0 | omg == 180) & ...
+           (bet ==  90 &  (alp > -90 & alp <= 90)) | ...
+           (bet == -90 & ~(alp > -90 & alp <= 90)));
+    end
   else
     % Flip if omg < 0
-    % at northern umblic, return alp in (-180,-90] + (90, 180]
-    % at southern umblic, return alp in (-90, 90]
-    l =  omg < 0 | ...
-         ((omg ==   0 | omg == 180) & ...
-          (bet ==  90 &  (alp > -90 & alp <= 90)) | ...
-          (bet == -90 & ~(alp > -90 & alp <= 90)));
+    l =  omg < 0;
+    if nargin >= 2
+      % at northern umblic, return alp in (-180,-90] + (90, 180]
+      % at southern umblic, return alp in (-90, 90]
+      l = l | ...
+          ((omg ==   0 | omg == 180) & ...
+           (bet ==  90 &  (alp > -90 & alp <= 90)) | ...
+           (bet == -90 & ~(alp > -90 & alp <= 90)));
+    end
   end
   ellipn = [bet, omg];
   alpn = alp;
